fixed item Service

--- a/JSWeb-exams/auction-house 2/views/home.hbs
+++ b/JSWeb-exams/auction-house 2/views/home.hbs
@@ -1,14 +1,5 @@
 <main>
 
-  <!-- In case of error, display the following div-->
-  <!--
-
-            <div class="error-box">
-                <p>Show each error in a separate paragraph</p>
-            </div>
-
-            -->
-
   <!-- Home Page -->
   <section id='catalog-section'>
 
@@ -29,8 +20,8 @@
           </p>
 
           <div class='align-center'>
-            <a class='action' href='#'>Browse Listings</a>
-            <a class='action' href='#'>Publish Auction</a>
+            <a class='action' href='/site/catalog'>Browse Listings</a>
+            <a class='action' href='/site/publish'>Publish Auction</a>
           </div>
         </div>
       </div>
