--- a/JSWeb-exams/auction-house 2/views/catalog.hbs
+++ b/JSWeb-exams/auction-house 2/views/catalog.hbs
@@ -15,7 +15,7 @@
   <div class="item pad-large align-center">
     <p>Nothing has been listed yet. Be the first!</p>
     <div>
-      <a class="action" href="#">Publish Auction</a>
+      <a class="action" href="/site/publish">Publish Auction</a>
     </div>
   </div>
   {{/if}}
