--- a/retake exam/views/layouts/main.hbs
+++ b/retake exam/views/layouts/main.hbs
@@ -1,37 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Home Page - Gaming Team</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-</head>
+    <base href="/"> 
+    <link rel='stylesheet'  href='./static/css/site.css' />
+  </head>
 
-<body>
-    <header class="header">
-        <nav>
-            <img src="./static/images/logo.jpg" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">All Games Code</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Create Game Offer</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </nav>
+  {{#if errors}}
+    <div>
+      {{#each errors}}
+        <div class='errorContainer'>
+          <p>{{this}}</p>
+        </div>
+      {{/each}}
+    </div>
+  {{/if}}
+
+  <body>
+    <header class='header'>
+      <nav>
+        <img src='./static/images/logo.jpg' class='logo' />
+        <ul>
+          <li><a href='/'>Home</a></li>
+          <li><a href='/site/catalog'>All Games Code</a></li>
+          <li><a href='#'>Search</a></li>
+          <li><a href='/site/publish'>Create Game Offer</a></li>
+          <li><a href='/auth/login'>Login</a></li>
+          <li><a href='/auth/register'>Register</a></li>
+          <li><a href='/auth/logout'>Logout</a></li>
+        </ul>
+      </nav>
     </header>
 
-  {{{body}}}
-    </main>
+    {{{body}}}
 
     <footer>
-        <p>Back-End 2023</p>
+      <p>Back-End 2023</p>
     </footer>
 
-</body>
+  </body>
 
 </html>
