--- a/retake exam/views/login.hbs
+++ b/retake exam/views/login.hbs
@@ -1,6 +1,22 @@
-<h1>Login</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <button>Register</button>
-</form>
+  <main id="login">
+        <!-- In case of error, you should display div with class "errorContainer" -->
+        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+
+        <!-- <div>
+            <div class="errorContainer">
+                <p>Error</p>
+            </div>
+        </div> -->
+
+        <div class="login-box">
+            <h1>Login</h1>
+            <form action="#" method="">
+                <label>Email</label>
+                <input type="text" name="" placeholder="Email..">
+                <label>Password</label>
+                <input type="password" name="" placeholder="Password..">
+                <input type="submit" value="Login">
+            </form>
+            <p>Don't have an account? <a href="#">Register here</a></p>
+        </div>
+    </main>
