--- a/retake exam/views/register.hbs
+++ b/retake exam/views/register.hbs
@@ -1,7 +1,18 @@
-<h1>Register page</h1>
-<form method='post'>
-  <label>Username <input type='text' name='username' /></label>
-  <label>Password <input type='password' name='password' /></label>
-  <label>Repeat password <input type='password' name='repass' /></label>
-  <button>Register</button>
-</form>
+   <main id="register">
+        <div class="register-box">
+            <h1>Register</h1>
+            <h4>It's free and only takes a minute</h4>
+            <form action="/auth/register" method="post">
+                <label>Username</label>
+                <input type="text" name="username" placeholder="Username..">
+                <label>Email</label>
+                <input type="text" name="email" placeholder="Email..">
+                <label>Password</label>
+                <input type="password" name="password" placeholder="Password..">
+                <label>Confirm Password</label>
+                <input type="password" name="repass" placeholder="Confirm Password..">
+                <input type="submit" value="Register">
+            </form>
+            <p>Already have an account? <a href="/auth/login">Login here</a></p>
+        </div>
+    </main>
