--- a/retake exam/views/login.hbs
+++ b/retake exam/views/login.hbs
@@ -1,22 +1,14 @@
-  <main id="login">
-        <!-- In case of error, you should display div with class "errorContainer" -->
-        <!-- You can choose to display the first error or all of them (error message/s in your opinion) -->
+<main id='login'>
 
-        <!-- <div>
-            <div class="errorContainer">
-                <p>Error</p>
-            </div>
-        </div> -->
-
-        <div class="login-box">
-            <h1>Login</h1>
-            <form action="#" method="">
-                <label>Email</label>
-                <input type="text" name="" placeholder="Email..">
-                <label>Password</label>
-                <input type="password" name="" placeholder="Password..">
-                <input type="submit" value="Login">
-            </form>
-            <p>Don't have an account? <a href="#">Register here</a></p>
-        </div>
-    </main>
+  <div class='login-box'>
+    <h1>Login</h1>
+    <form action='/auth/login' method='post'>
+      <label>Email</label>
+      <input type='text' name='email' placeholder='Email..' />
+      <label>Password</label>
+      <input type='password' name='password' placeholder='Password..' />
+      <input type='submit' value='Login' />
+    </form>
+    <p>Don't have an account? <a href='/auth/register'>Register here</a></p>
+  </div>
+</main>
