working user auth and login

--- a/retake exam/views/home.hbs
+++ b/retake exam/views/home.hbs
@@ -7,6 +7,6 @@
       at the
       <strong>best price</strong>!
     </p>
-    <a href='#' class='buy'>BUY</a>
+    <a href='/site/catalog' class='buy'>BUY</a>
   </div>
 </main>
