--- a/retake exam/views/layouts/main.hbs
+++ b/retake exam/views/layouts/main.hbs
@@ -5,8 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Home Page - Gaming Team</title>
-    <base href="/"> 
-    <link rel='stylesheet'  href='./static/css/site.css' />
+    <base href='/' />
+    <link rel='stylesheet' href='./static/css/site.css' />
   </head>
 
   {{#if errors}}
@@ -24,14 +24,22 @@
       <nav>
         <img src='./static/images/logo.jpg' class='logo' />
         <ul>
+
           <li><a href='/'>Home</a></li>
           <li><a href='/site/catalog'>All Games Code</a></li>
-          <li><a href='#'>Search</a></li>
-          <li><a href='/site/publish'>Create Game Offer</a></li>
+          {{#if user}}
+            <li><a href='#'>Search</a></li>
+            <li><a href='/site/publish'>Create Game Offer</a></li>
+          {{/if}}
+          {{#unless user}}
           <li><a href='/auth/login'>Login</a></li>
           <li><a href='/auth/register'>Register</a></li>
-          <li><a href='/auth/logout'>Logout</a></li>
+          {{/unless}}
+          {{#if user}}
+            <li><a href='/auth/logout'>Logout</a></li>
+          {{/if}}
         </ul>
+
       </nav>
     </header>
 
