--- a/retake exam/views/details.hbs
+++ b/retake exam/views/details.hbs
@@ -17,8 +17,8 @@
         <!--Only for registered user and author of the publication -->
         {{#if game.author}}
           <div class='author'>
-            <a href='#' class='btn-edit'>Edit</a>
-            <a href='#' class='btn-delete'>Delete</a>
+            <a href='/site/{{game._id}}/edit' class='btn-edit'>Edit</a>
+            <a href='/site/delete/{{game._id}}' class='btn-delete'>Delete</a>
           </div>
 
         {{else}}
